@@ -87,6 +87,7 @@ MovieJukebox 1.0.16 beta
   - Fixed defect #622 BluRay Scanner no longer recognises moviename
   - Fixed defect #623 Changes to Sratim plugin
   - Enhancement  #630 Specify character encoding for NFO files (parameter mjb.forceNFOEncoding)
+  - Enhancement  #642 moviejukebox.properties and skin.properties UTF-8 character set
 
 MovieJukebox 1.0.15 beta
 ------------------------
